# service_status_indicator

./: .gitignore  CONTRIBUTING.md  README.md  api.py  cli.py  config.py  database.py  helpers.py  install.sh  logger.py  models.py  pyproject.toml  scheduler.py  service_registry.py  uninstall.sh
scripts/: ssi  start-scheduler.sh  start-server.sh  token_generator.sh
services/: default.json
services/scripts/: functions
services/scripts/default/: checks-system-services.sh  checks-system-updates.sh
units/: service-status-indicator-api.service  service-status-indicator-scheduler.service
